Sidebar has been redefined: - Privacy-Policy and Legal Notice are now also highlighted, like the links above them - When you reload the page, the highlighted area in the sidebar no longer jumps to the default ‘Summary’ but remains dynamically on the page that is also displayed - Styling has been adjusted so that everything is displayed uniformly and dynamically -JSDoc was created for the sidebar TS

--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -62,12 +62,21 @@ main {
   @include dF(space-between, center);
   flex-direction: column;
   gap: 12px;
+  width: 100%;
 
   a {
     text-decoration: none;
     color: white;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     &:hover {
-      color: $lightblue;
+      background-color: rgb(77, 97, 126);
+    }
+    &.active {
+      background-color: rgb(9 24 50);
     }
   }
 }
